Added handlebars.js script reference

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="/css/main.css">
     <!-- endbuild -->
 
+    <script src="/components/handlebars/handlebars.min.js"></script>
     <script src="/components/modernizer/modernizer.js"></script>
   </head>
   <body>
